--- a/public/components/ns-elements/ns-app-elements/ns-sample-app-element/ns-sample-app-element.html
+++ b/public/components/ns-elements/ns-app-elements/ns-sample-app-element/ns-sample-app-element.html
@@ -23,7 +23,7 @@ Element providing solution to no problem in particular.
 
   <script>
 
-    Polymer('ns-sample-app-element', {
+    Polymer({
       /**
        * The `noevent` event is not actually fired from here,
        * we document it as an example of documenting events.
